add clojure profiler