@@ -6,10 +6,12 @@
   :plugins [[lein-cloverage "1.1.2"] [lein-bikeshed "0.5.2"] [lein-cljfmt "0.6.6"] [jonase/eastwood "0.3.5"]]
   :bikeshed {:max-line-length 120}
   :dependencies [[org.clojure/clojure "1.10.0"]
+                 [com.clojure-goes-fast/clj-async-profiler "0.4.0"]
                  [cljfmt "0.5.1"]
                  [http-kit "2.3.0"]
                  [org.clojure/data.json "0.2.6"]]
   :main ^:skip-aot witchazzan.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}}
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"]
   :repl-options {:port 8081})
